# talo

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
examples/: envs.yaml.example
skills/talo-remote-dev/: SKILL.md  SKILL.zh-CN.md
src/talo/: __init__.py  __main__.py  cli.py
src/talo/scripts/: __init__.py  docker_exec.sh  docker_ps.sh  pull_file.sh  push_file.sh  remote_exec.sh  sync_code.sh
tests/: test_cli.py
